# major

./: .gitignore  LICENSE  README.md  build.gradle.kts  example_vote.json  gradle.properties  hie.yaml  major.cabal  package.yaml  settings.gradle.kts
app/: build.gradle.kts
app/client/: Main.hs
app/server/: Main.hs  Major.hs  Matrix.hs
app/src/main/: AndroidManifest.xml
buildSrc/src/main/java/: AppConfig.kt  AppDependencies.kt  Dependencies.kt  Extensions.kt  Versions.kt
common/: API.hs  Common.hs
gradle/wrapper/: gradle-wrapper.properties
major-server/: ChangeLog.md  hie.yaml  major-server.cabal  package.yaml  stack.yaml
major-server/app/: Main.hs
major-server/src/: API.hs  Domain.hs  MemoryDatabase.hs  Server.hs
major-server/test/: Test.hs  example_config.json  test.http
major_client/: pubspec.yaml
major_client/android/app/: build.gradle
major_client/ios/Runner/: Info.plist
major_client/ios/Runner.xcodeproj/: project.pbxproj
major_client/lib/: api.dart  api.g.dart  app_state.dart  http_service.dart  main.dart
major_client/lib/pages/: home.dart  info.dart  register.dart  results.dart  voting.dart
major_client/lib/util/: either.dart  unit.dart
major_client/test/: widget_test.dart
major_client/web/: index.html  manifest.json
major_server/: .gitignore  Cargo.toml  example_config.json  example_vote.json  major.cabal  package.yaml
major_server/.cargo/: config.toml
major_server/app/client/: Main.hs
major_server/app/server/: Main.hs
major_server/common/: API.hs
major_server/src/: api.rs  main.rs  major.rs  matrix.rs
(+116 files in other folders)
